--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
   font-family: sans-serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   position: relative;
   padding-bottom: 100px;
@@ -21,7 +25,7 @@ p.section {
   margin: 15px auto 0px auto;
 }
 
-/* header */
+/* HEADER */
 .navbar {
   overflow: hidden;
   background-color: #333;
@@ -37,13 +41,29 @@ p.section {
   margin-bottom: 60px;
 }
 
+.navbar ul {
+  margin-right: 5px;
+}
+
 .navbar ul li {
-  display: inline;
+  display: inline-block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  width: 90px;
+  height: 30px;
+  line-height: 30px;
   text-decoration: none;
   font-size: 17px;
+  transition: 1s;
+}
+
+.active {
+  background-color: white;
+  border-radius: 4px;
+}
+
+.active a {
+  color: rgba(0, 0, 0, 0.863);
 }
 
 .navbar a {
@@ -51,11 +71,11 @@ p.section {
   transition: color 0.4s;
 }
 
-.navbar a:hover {
-  color: gray;
+.navbar li:hover {
+  color: #333;
 }
 
-.navbar a.active {
+.navbar a.home-logo {
   color: white;
 }
 
@@ -68,7 +88,7 @@ p.section {
   background-color: #a4cdd8;
 }
 
-/* home */
+/* HOME */
 .title {
   position: absolute;
   top: 60px;
@@ -107,37 +127,49 @@ p.section {
 
 .image-title-container {
   display: flex;
-  justify-content: flex-start;
-  margin-top: 125px;
+  justify-content: space-between;
+  margin-top: 120px;
 }
 
 .home-title-container {
+  width: 65vw;
+}
+
+.home-title-container p:nth-child(1) {
   color: #326978;
   font-size: 45px;
   font-weight: bolder;
   letter-spacing: 7px;
 }
+
+.home-title-container p:nth-child(2) {
+  color: #326978;
+  font-size: 20px;
+  font-weight: bolder;
+  letter-spacing: 2px;
+}
+
 #my_image {
   margin: 0px 10px 30px 0px;
   background-image: url("./image/image.png");
   background-size: cover;
-  background-size: 305px;
+  background-size: 24vw;
   background-repeat: no-repeat;
   border-radius: 100%;
-  width: 305px;
-  height: 300px;
+  width: 24vw;
+  height: 24vw;
 }
 
 #home img {
   width: 200px;
 }
 
-/* content */
+/* CONTENT */
 .content {
   padding-top: 50px;
 }
 
-/* contact */
+/* CONTACT */
 #contact {
   margin-bottom: 100px;
   min-height: 400px;
@@ -149,7 +181,7 @@ p.section {
   color: #56b9d4;
 }
 
-/* skills */
+/* SKILLS */
 .skills-container {
   display: flex;
   justify-content: space-around;
@@ -185,58 +217,70 @@ p.section {
   margin-top: 30px;
 }
 
-/* projects */
+/* PROJECTS */
 #projects {
   min-height: 500px;
 }
 
-.projects-container {
+.flip-card-container {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
-.project-section {
-  width: 30%;
+.flip-card {
+  position: relative;
+  width: 300px;
+  height: 350px;
+  transform-style: preserve-3d;
+}
+
+.flip-face {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform-style: preserve-3d;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  backface-visibility: hidden;
+  transition: 1.5s ease-in-out;
+  transform: perspective(500px) rotateY(0deg);
 }
 
-.project-section p {
+.flip-front {
+  display: flex;
+  flex-direction: column;
+}
+
+.flip-card:hover .flip-front {
+  transform: perspective(500px) rotateY(180deg);
+}
+
+.flip-back {
+  background-color: white;
+  transform: perspective(500px) rotateY(180deg);
+}
+
+.flip-card:hover .flip-back {
+  transform: perspective(500px) rotateY(360deg);
+}
+
+.flip-card p {
+  text-transform: uppercase;
+  transform: perspective(500px) translateZ(50px);
   color: #16586b;
   text-align: center;
-  font-family: "Lucida Console", "Courier New", monospace;
   font-size: 22px;
   font-weight: bolder;
 }
 
-.project-section img {
+.flip-card img {
   width: 150px;
 }
 
-/* about */
-#about {
-  min-height: 500px;
-}
-#about-context {
-  text-align: left;
-  font-size: 23px;
-  color: #006784;
-  margin: 45px 60px 0 60px;
-}
-
-.about-container {
-  display: flex;
-  justify-content: center;
-}
-
-.about-container img {
-  width: 35%;
-  height: 30%;
-}
-
-/* footer */
+/* FOOTER */
 .footer {
   background-color: #a4cdd8;
   color: white;
